--- a/dists/test.html
+++ b/dists/test.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <video id="player" width="100%" controls></video>
-<script src="ytdl-ffmpeg-demo.js"></script>
+<script src="ytdl-ffmpeg-demos.js"></script>
 <script>
     (async () => {
         const buffer = await script.getBestAudioBuffer("https://www.youtube.com/watch?v=gjx-iHGXk9Q");
